styles.css
body {
    font-family: 'Arial', sans-serif;
    background-color: #f4f4f4;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    margin: 0;
    color: #333;
    overflow: hidden;
    padding: 10%;
}

#game-screen {
    background: #fff;
    padding: 20px 40px;
    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
    text-align: center;
    width: 80%;
    max-width: 600px;
    border-radius: 10px;
    display: none;
}

h1 {
    color: #007BFF;
}

.select-category {
    margin-bottom: 20px;
}

.form-control {
    width: 100%;
    padding: 10px;
    margin-top: 10px;
    margin-bottom: 20px;
    font-size: 1rem;
    border-radius: 5px;
    border: 1px solid #ccc;
}

button {
    padding: 10px 20px;
    background-color: #007BFF;
    color: #fff;
    border: none;
    cursor: pointer;
    border-radius: 5px;
    font-size: 1rem;
}

button:disabled {
    background-color: #aaa;
    cursor: not-allowed;
}

#question-container button {
    display: block;
    width: 100%;
    padding: 10px;
    margin: 10px 0;
    font-size: 1rem;
    border-radius: 5px;
    border: 1px solid #ccc;
    cursor: pointer;
}

#question-container button.correct {
    background-color: green;
    color: white;
}

#question-container button.incorrect {
    background-color: red;
    color: white;
}

#score-container, #info-container {
    margin-top: 20px;
    font-size: 1.2em;
}

#preloader {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    font-size: 24px;
    font-weight: bold;
    animation: blinker 1.5s linear infinite;
    display: none;
}

@keyframes blinker {
    50% {
        opacity: 0;
    }
}

.flash {
    background-color: black;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 10;
    animation: flash 0.5s;
}

@keyframes flash {
    0% {
        opacity: 1;
    }
    100% {
        opacity: 0;
    }
}

#next-button, #score-container {
    display: none;
}

#progress-bar {
    width: 100%;
    background-color: #ddd;
    border-radius: 5px;
    overflow: hidden;
}

#progress {
    height: 20px;
    background-color: #007BFF;
    width: 0%;
    transition: width 0.3s;
}

.feedback {
    font-size: 1.2em;
    margin-top: 10px;
}

